--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Jailson Webradio",
-  "short_name": "Jailson Webradio",
+  "name": "G.Z. KYI RadioStation",
+  "short_name": "KYI RadioStation",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
